@@ -211,10 +211,10 @@ SEE ALSO
         Install the Tags modules.
 
 AUTHOR
-    Michal Špaček skim@cpan.org
+    Michal Josef Špaček skim@cpan.org
 
 LICENSE AND COPYRIGHT
-    © 2011-2020 Michal Špaček
+    © 2011-2020 Michal Josef Špaček
 
     BSD 2-Clause License
 
