@@ -3,6 +3,7 @@
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author github username.
+ - Update author name.
  - Update copyright years.
 
 0.05 2016-03-23T21:22:44+01:00
